--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="dayNightWhite">#FF000000</color>
+    <color name="dayNightBlack">#FFFFFF</color>
+
+    <color name="colorPrimary">#0F172A</color>
+    <color name="colorAccent">#1E293B</color>
+    <color name="colorTextIcons">#D1D5DB</color>
+    <color name="colorPrimaryText">#0F172A</color>
+    <color name="colorSecondaryText">#64748B</color>
+    <color name="colorSecondary">#1E293B</color>
+
+    <color name="color_primary">#0F172A</color>
+    <color name="color_tertiary">#94A3B8</color>
+    <color name="color_quaternary">#E2E8F0</color>
+    <color name="color_main_button_disabled">#CCCCCC</color>
+
+    <color name="color_accent_blue">#0EA5E9</color>
+    <color name="color_tag_green">#22C55E</color>
+    <color name="color_tag_red">#EF4444</color>
+    <color name="color_tag_gray">#6B7280</color>
+
+    <color name="color_component_gray_border">#CBD5E1</color>
+    <color name="color_textinputlayout_hint_text">#94A3B8</color>
+
+    <color name="color_text_primary">#0F172A</color>
+    <color name="color_text_secondary">#475569</color>
+    <color name="color_text_tertiary">#FFFFFF</color>
+
+    <color name="color_fragment_background">#00000000</color>
+    <color name="color_search_edit_text_background">#F3F4F6</color>
+
+    <color name="color_ticket_separator">#B3E5E7EB</color>
+    <color name="color_ticket_separator_dashed">#CBD5E1</color>
+    <color name="color_link">#0284C7</color>
+
+    <color name="color_transparent_button">#F1F5F9</color>
+
+    <color name="color_error_text">#DC2626</color>
+    <color name="alphaGrey">#60CACACA</color>
+
+    <color name="color_icon_unselected">#94A3B8</color>
+
+    <color name="color_badge">#0EA5E9</color>
+    <color name="description_color">#374151</color>
+    <color name="highlighted_color">#5E000000</color>
+    <color name="colorToolbar">#00000000</color>
+    <color name="transparentColor">#00000000</color>
+
+    <color name="lightBlue900">#002BC6</color>
+    <color name="lightBlue500">#00AAFF</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_600">#FF757575</color>
+
+    <color name="side_bar_color">#70FFFFFF</color>
+    <color name="bottom_scalebar_color">#70D9D9D9</color>
+    <color name="background_dark">#85808080</color>
+    <color name="color_gold">#FFD700</color>
+
 </resources>
